--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -47,22 +47,26 @@ a {
 }
 
 table, tr, th, td {
-    border: 1px solid #cccccc;
+    border: 1px solid #ffffff;
 }
 
 table {
     width: 100%;
     table-layout: fixed;
+    font-size: 12px;
 }
 
 th {
     width: 26%;
-    padding: 10px 2%;
+    padding: 5px;
+    text-align: center;
+    vertical-align: middle;
 }
 
 td {
     width: 66%;
-    padding: 10px 2%;
+    padding: 5px;
+    color: #616161;
 }
 
 button {
@@ -111,4 +115,40 @@ img#icon {
     margin-bottom: 15px;
     color: #721c24;
     background-color: #f8d7da;
+}
+
+body#admin {
+    background-color: #0d47a0;
+}
+
+th.id {
+    width: 10%;
+}
+
+th.name {
+    width: 35%;
+}
+
+th.admin {
+    width: 10%;
+}
+
+th.date {
+    width: 16%;
+}
+
+th.action {
+    width: 13%;
+}
+
+tr.label {
+    background-color: #f3981d;
+}
+
+tr.raw1 {
+    background-color: #ffeddb;
+}
+
+tr.raw0 {
+    background-color: #ffe5cc;
 }
