--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -66,6 +66,8 @@ th {
 td {
     width: 66%;
     padding: 5px;
+    text-align: center;
+    vertical-align: middle;
     color: #616161;
 }
 
@@ -145,11 +147,11 @@ tr.label {
     background-color: #f3981d;
 }
 
-.raw1 {
+.row1 {
     background-color: #ffeddb;
 }
 
-.raw0 {
+.row0 {
     background-color: #ffe5cc;
 }
 
