--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -155,6 +155,14 @@ tr.label {
     background-color: #ffe5cc;
 }
 
+.gray_row1 {
+    background-color: #f5f5f5;
+}
+
+.gray_row0 {
+    background-color: #e9e9e9;
+}
+
 table#show {
     width: 65%;
 }
