--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -6,6 +6,10 @@ body {
     background-color: #f3981d;
 }
 
+button {
+    font-family: "Yu Gothic Medium",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
+}
+
 #header {
     width: 100%;
     height: 70px;
@@ -27,8 +31,14 @@ h1 {
 
 h2 {
     font-size: 12px;
-    margin-bottom: 15px;
     color: #ffffff;
+}
+
+h3 {
+    font-size: 12px;
+    padding-left: 5%;
+    text-align: left;
+    color: #616161;
 }
 
 li {
@@ -42,8 +52,8 @@ p {
 }
 
 a {
-    text-decoration: none;
-    color: #24738e;
+    font-size: 12px;
+    color: #436cff;
 }
 
 table, tr, th, td {
@@ -81,16 +91,104 @@ button {
     font-size: 14px;
     text-align: center;
     padding-top: 18px;
+    margin-top: 70px;
     color: #616161;
     background-color: #ffffff;
+}
+
+textarea {
+    font-family: "Yu Gothic Medium",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
+    font-size: 12px;
+    color: #616161;
+    width: 90%;
+}
+
+input {
+    font-family: "Yu Gothic Medium",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
+    font-size: 12px;
+    color: #616161;
+    height: 16px;
+}
+
+select, option {
+    font-family: "Yu Gothic Medium",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
+    font-size: 12px;
+    color: #616161;
+    height: 20px;
+}
+
+body#admin {
+    background-color: #0d47a0;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.window {
+    background-color: #ffffff;
+    padding: 10px 10px;
+    margin-top: 15px;
+    border-radius: 5px;
+}
+
+.small_window {
+    display: inline-block;
+    width: 30%;
+    background-color: #ffffff;
+    padding: 10px 10px;
+    margin-top: 15px;
+    border-radius: 5px;
+}
+
+h2.cocktail_name {
+    font-weight: bold;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    text-align: center;
+    color: #616161;
+    border: 1px solid #f3981d;
+    border-radius: 5px;
+}
+
+h2.ingredient {
+    padding: 2px 0px;
+    margin-bottom: 5px;
+    text-align: center;
+    color: #f3981d;
+    border: 1px solid #f3981d;
+    border-radius: 5px;
+}
+
+h2.introduction {
+    padding: 2px 0px;
+    margin-bottom: 5px;
+    text-align: center;
+    color: #f3981d;
+    border: 1px solid #f3981d;
+    border-radius: 5px;
 }
 
 img#logo {
     width: 170px;
     height: 50px;
     margin-top: 10px;
-    margin-left: 10px;
+    margin-right: 80px;
     color: #f3981d;
+}
+
+img#symbol {
+    width: 300px;
+    height: 300px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    color: #ffffff;
+}
+
+img.menu_icon {
+    width: 45px;
+    height: 45px;
 }
 
 img.icon {
@@ -100,27 +198,189 @@ img.icon {
 }
 
 #flush_success {
-    width: 100%;
-    padding-top: 28px;
-    padding-left: 2%;
-    padding-bottom: 28px;
+    width: 90%;
+    padding: 28px 2%;
     margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
     color: #155724;
     background-color: #d4edda;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0,0,0,.3);
 }
 
 #flush_error {
-    width: 100%;
-    padding-top: 28px;
-    padding-left: 2%;
-    padding-bottom: 28px;
+    width: 90%;
+    padding: 28px 2%;
     margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
     color: #721c24;
     background-color: #f8d7da;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0,0,0,.3);
 }
 
-body#admin {
-    background-color: #0d47a0;
+div#login {
+    text-align: center;
+    font-size: 14px;
+}
+
+div#login button {
+    font-size: 16px;
+    font-weight: bold;
+    padding: 3px 20px;
+    margin-bottom: 30px;
+    background-color: #ffffff;
+    color: #f3981d;
+    border: solid #616161;
+    border-radius: 30px;
+}
+div#login button:hover {
+    cursor: pointer;
+    text-decoration: none;
+    -webkit-animation: button 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    -moz-animation: button 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: button 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+@-webkit-keyframes button {
+    0% {
+        -webkit-transform: scale(0.85);
+        transform: scale(0.85);
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+@-moz-keyframes button {
+    0% {
+        -webkit-transform: scale(0.85);
+        transform: scale(0.85);
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+@keyframes button {
+    0% {
+        -webkit-transform: scale(0. 85);
+        transform: scale(0.85);
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+div#login input {
+    width: 300px;
+    text-align: center;
+}
+
+div#login a {
+    font-size: 14px;
+}
+
+div#admin_menu {
+    margin-right: 4%;
+    text-align: right;
+    font-size: 12px;
+}
+
+div#header_menu {
+    display: inline-block;
+    width: 57%;
+    padding-left: 3%;
+    font-size: 12px;
+    color: #f3981d;
+}
+
+div#header_menu a {
+    text-decoration: none;
+    font-size: 12px;
+    color: #f3981d;
+}
+
+div#user_name {
+    display: inline-block;
+    width: 36%;
+    padding-right: 3%;
+    padding-bottom: 40px;
+    text-align: right;
+    vertical-align: middle;
+    color: #f3981d;
+}
+
+div#user_name a {
+    text-decoration: none;
+    font-size: 12px;
+    padding: 8px 15px;
+    margin-left: 30px;
+    background-color: #616161;
+    color: #ffffff;
+    border: none;
+    border-radius: 30px;
+}
+
+div#image {
+    width: 25%;
+    padding: 20px;
+    text-align: center;
+}
+
+div#data {
+    width: 75%;
+    padding: 20px;
+}
+
+div#form_type {
+    width: 45%;
+    text-align: right;
+}
+
+div#form {
+    text-align: left;
+    width: 55%;
+}
+
+div#ingredient {
+    width: 35%;
+    font-size: 12px;
+    padding: 20px;
+    color: #616161;
+}
+
+div#introduction {
+    width: 65%;
+    font-size: 12px;
+    padding: 20px;
+    text-align: center;
+    color: #616161;
+}
+
+div#date_user {
+    font-size: 12px;
+    padding: 2%;
+    text-align: right;
+    color: #f3981d;
+}
+
+div.action_button {
+    margin-right: 2%;
+    margin-bottom: 2%;
+    text-align: right;
+}
+
+div.recipe_list1 {
+    width: 35%;
+    color: #616161;
+}
+
+div.recipe_list2 {
+    width: 65%;
+    color: #616161;
 }
 
 table#user_list .id {
@@ -163,49 +423,16 @@ tr.label {
     background-color: #e9e9e9;
 }
 
-table#show {
-    width: 65%;
-}
-
 table#show th {
     background-color: #f3981d;
 }
 
-div#login {
-    text-align: center;
-}
-
-img#symbol {
-    width: 300px;
-    height: 300px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    color: #ffffff;
-}
-
-img.menu_icon {
-    width: 40px;
-    height: 40px;
-}
-
-div#header_menu {
-    width: 40%;
-    display: inline-block;
-    color: #3981d;
-}
-
-div#user_name {
-    width: 30%;
-    display: inline-block;
-    color: #3981d;
-}
-
 table#ingredient_list .name {
-    width: 28%;
+    width: 35%;
 }
 
 table#ingredient_list .type {
-    width: 15%;
+    width: 13%;
 }
 
 table#ingredient_list .abv {
@@ -217,9 +444,316 @@ table#ingredient_list .soda_flag {
 }
 
 table#ingredient_list .date {
-    width: 25%;
+    width: 20%;
 }
 
 table#ingredient_list .action {
     width: 13%;
+}
+
+table.ingredients {
+    margin: 4px 0px;
+}
+
+table.ingredients th {
+    width: 70%;
+    padding-left: 10px;
+    text-align: left;
+}
+
+table.ingredients td {
+    width: 30%;
+    padding-right:10px;
+    text-align: right;
+}
+
+table.info td {
+    text-align: left;
+    padding-left: 10px;
+}
+
+table#stock_list .name {
+    width: 24%;
+}
+
+table#stock_list .type {
+    width: 13%;
+}
+
+table#stock_list .vol {
+    width: 13%;
+}
+
+table#stock_list .date {
+    width: 13%;
+}
+
+table#stock_list .comment {
+    width: 24%;
+}
+
+table#stock_list .action {
+    width: 13%;
+}
+
+table.chose_ingredients {
+    padding: 0px 10px;
+}
+
+table.chose_ingredients th {
+    width: 60%;
+    text-align: left;
+}
+
+table.chose_ingredients td {
+    width: 20%;
+    text-align: right;
+}
+
+table.chose_ingredients td input {
+    width: 100%;
+}
+
+table.chose_ingredients td select {
+    width: 100%;
+}
+
+table input {
+    width: 70%;
+    height: 17px;
+}
+
+table select {
+    width: 70%;
+    height: 20px;
+}
+
+div#form_type input {
+    width: auto;
+}
+
+div#form input {
+    width: auto;
+}
+
+div#login input {
+    height: 24px;
+    font-size: 14px;
+}
+
+.pagination {
+    margin: 10px;
+    text-align: right;
+    font-size: 14px;
+    color: #f3981d;
+}
+
+.pagination a {
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.pagination_w {
+    margin: 10px;
+    text-align: right;
+    font-size: 14px;
+    color: #ffffff;
+}
+
+.pagination_w a {
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.action a {
+    text-decoration: none;
+    font-size: 12px;
+    padding: 3px 15px;
+    background-color: #f3981d;
+    color: #ffffff;
+    border: none;
+    border-radius: 10px;
+}
+
+.action button {
+    text-decoration: none;
+    font-size: 12px;
+    padding: 1px 15px;
+    background-color: #f3981d;
+    color: #ffffff;
+    border: none;
+    border-radius: 10px;
+}
+.action button:hover {
+    cursor: pointer;
+}
+
+#user_list .action a {
+    text-decoration: none;
+    font-size: 12px;
+    padding: 3px 15px;
+    background-color: #0d47a0;
+    color: #ffffff;
+    border: none;
+    border-radius: 10px;
+}
+
+#user_list .action a.deleted {
+    text-decoration: none;
+    font-size: 12px;
+    padding: 3px 15px;
+    background-color: #e65100;
+    color: #ffffff;
+    border: none;
+    border-radius: 10px;
+}
+
+#ingredient_list .action a {
+    text-decoration: none;
+    font-size: 12px;
+    padding: 3px 15px;
+    background-color: #0d47a0;
+    color: #ffffff;
+    border: none;
+    border-radius: 10px;
+}
+
+.gray_row1 .action a {
+    background-color: #616161;
+    color: #ffffff;
+}
+
+.gray_row0 .action a {
+    background-color: #616161;
+    color: #ffffff;
+}
+
+a.gray_button {
+    text-decoration: none;
+    font-size: 16px;
+    padding: 5px 15px;
+    text-align: right;
+    background-color: #616161;
+    color: #ffffff;
+    border: none;
+    border-radius: 15px;
+}
+
+a.red_button {
+    text-decoration: none;
+    font-size: 16px;
+    padding: 4px 14px;
+    text-align: right;
+    background-color: #ffffff;
+    color: #e65100;
+    border: 1px solid #e65100;
+    border-radius: 15px;
+}
+
+a.orange_button {
+    text-decoration: none;
+    font-size: 16px;
+    padding: 5px 15px;
+    text-align: right;
+    background-color: #f3981d;
+    color: #ffffff;
+    border: none;
+    border-radius: 15px;
+}
+
+a.blue_button {
+    text-decoration: none;
+    font-size: 16px;
+    padding: 5px 15px;
+    text-align: right;
+    background-color: #0d47a0;
+    color: #ffffff;
+    border: none;
+    border-radius: 15px;
+}
+
+a.small_orange_button {
+    text-decoration: none;
+    font-size: 12px;
+    padding: 4px 15px;
+    background-color: #f3981d;
+    color: #ffffff;
+    border: none;
+    border-radius: 10px;
+}
+
+a.small_blue_button {
+    text-decoration: none;
+    font-size: 12px;
+    padding: 4px 15px;
+    background-color: #0d47a0;
+    color: #ffffff;
+    border: none;
+    border-radius: 10px;
+}
+
+button.red_button {
+    text-decoration: none;
+    font-size: 16px;
+    padding: 2px 14px;
+    text-align: right;
+    background-color: #ffffff;
+    color: #e65100;
+    border: 1px solid #e65100;
+    border-radius: 15px;
+}
+button.red_button:hover {
+    cursor: pointer;
+}
+
+button.orange_button {
+    text-decoration: none;
+    font-size: 16px;
+    padding: 3px 15px;
+    text-align: right;
+    background-color: #f3981d;
+    color: #ffffff;
+    border: none;
+    border-radius: 15px;
+}
+button.orange_button:hover {
+    cursor: pointer;
+}
+
+button.blue_button {
+    text-decoration: none;
+    font-size: 16px;
+    padding: 3px 15px;
+    text-align: right;
+    background-color: #0d47a0;
+    color: #ffffff;
+    border: none;
+    border-radius: 15px;
+}
+button.blue_button:hover {
+    cursor: pointer;
+}
+
+button.as_anchor {
+    text-decoration: underline;
+    font-size: 12px;
+    padding: 0px 0px;
+    background-color: #ffffff;
+    color: #436cff;
+    border: none;
+}
+button.as_anchor:hover {
+    cursor: pointer;
+}
+
+button.as_red_anchor {
+    text-decoration: underline;
+    font-size: 12px;
+    padding: 0px 0px;
+    background-color: #ffffff;
+    color: #e65100;
+    border: none;
+}
+button.as_red_anchor:hover {
+    cursor: pointer;
 }
